# wxreader-note

./: .gitignore  24堂财富课：与女儿谈创业与创富.md  AI辅助编程实战.md  AngularJS入门与进阶.md  BASIC READERS：美国学校现代英语阅读教材(套装共7册)(英文原版).md  BERT基础教程：Transformer大模型实战.md  C Primer Plus（第6版）中文版【最新修订版】.md  C++ Primer（中文版）（第5版）.md  C++Templates中文版.md  C++新经典.md  C语言核心技术（原书第2版）.md  C语言程序设计：现代方法（第2版）.md  C语言编程魔法书：基于C11标准.md  Docker技术入门与实战（第3版）.md  Docker：容器与容器云（第2版）.md  Drools 8 规则引擎：核心技术与实践.md  Elasticsearch搜索引擎构建入门与实战.md  Electron Projects.md  Esprima master documentation.md  Flutter开发实战详解.md  Go语言学习笔记.md  HR全程法律顾问：企业人力资源管理高效工作指南（增订4版）.md  HTTP2 in Action 中文版.md  HTTP权威指南.md  Hands-On Game Development with WebAssembly.md  Head First Go语言程序设计.md  JavaScript深度学习.md  JavaScript编程精解（原书第3版）.md  JavaScript设计模式与开发实践.md  JavaScript高级程序设计（第4版）.md  Java多线程编程实战指南：设计模式篇（第2版）.md  Java多线程编程核心技术.md  Java实战（第2版）.md  Java并发编程之美.md  Java核心技术·卷Ⅰ：基础知识（原书第10版）.md  Java核心技术·卷Ⅱ：高级特性（原书第10版）.md  Java核心技术第10版（套装共2册）.md  Java程序设计基础教程.md  Java程序设计基础（第6版）.md  Java编程的逻辑.md  (+748 more)
.obsidian/: community-plugins.json  graph.json  workspace.json
.obsidian/plugins/obsidian-weread-plugin/: data.json
.weread-cache/: daily-stats.json
analysis/.specify/: init-options.json  integration.json
analysis/.specify/extensions/: .registry
analysis/.specify/integrations/: copilot.manifest.json  speckit.manifest.json  trae.manifest.json
analysis/.specify/memory/: constitution.md
analysis/.specify/templates/: plan-template.md  tasks-template.md
analysis/.specify/workflows/: workflow-registry.json
analysis/.trae/skills/speckit-plan/: SKILL.md
analysis/specs/cognitive-reading-graph/: plan.md  spec.md  tasks.md
backend/: .pre-commit-config.yaml  PROGRESS.md  README.md  STATUS.md  env_example.txt  mypy.ini  pyproject.toml  pytest.ini  setup.cfg
backend/docs/: QUICKSTART.md
backend/src/: __init__.py  config.py  database.py  main.py  neo4j_client.py  qdrant_client.py
backend/src/api/: __init__.py  analyze.py  books.py  graph.py  import.py  import_routes.py  profile.py  search.py  timeline.py
backend/src/models/: __init__.py  book.py  chapter.py  concept.py  highlight.py  reader.py
backend/src/schemas/: __init__.py  book.py  graph.py  highlight.py
backend/src/services/: __init__.py  ai_analyzer.py  book_service.py  concept_extractor.py  embedding_service.py  file_service.py  fix_concept_extractor.py  graph_service.py  highlight_service.py  llm_provider.py  markdown_parser.py  profile_service.py  vector_service.py
backend/src/utils/: __init__.py  exceptions.py  logging.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_books_api.py  test_import_api.py
backend/tests/unit/: test_ai_analyzer.py  test_markdown_parser.py
