"[build-system]
requires = [\"setuptools>=61.0\", \"wheel\"]
build-backend = \"setuptools.build_meta\"

[project]
name = \"cognitive-reading-graph\"
version = \"0.1.0\"
description = \"AI-powered personal knowledge graph based on WeChat Reading notes\"
readme = \"README.md\"
requires-python = \">=3.11\"
license = {text = \"MIT\"}
authors = [
    {name = \"Developer\"}
]
keywords = [\"knowledge-graph\", \"ai\", \"reading\", \"wechat\"]
classifiers = [
    \"Development Status :: 3 - Alpha\",
    \"Intended Audience :: Developers\",
    \"License :: OSI Approved :: MIT License\",
    \"Programming Language :: Python :: 3.11\",
]

dependencies = [
    # Web Framework
    \"fastapi>=0.104.0\",
    \"uvicorn[standard]>=0.24.0\",
    \"python-multipart>=0.0.6\",
    
    # Database
    \"sqlalchemy>=2.0.23\",
    \"psycopg2-binary>=2.9.9\",
    \"asyncpg>=0.29.0\",
    
    # Graph Database
    \"neo4j>=5.14.0\",
    
    # Vector Search
    \"qdrant-client>=1.7.0\",
    \"sentence-transformers>=2.2.2\",
    
    # AI / LLM
    \"langchain>=0.0.340\",
    \"langchain-openai>=0.0.2\",
    \"openai>=1.3.0\",
    
    # Configuration
    \"pydantic>=2.5.0\",
    \"pydantic-settings>=2.1.0\",
    \"python-dotenv>=1.0.0\",
    
    # Utilities
    \"python-dateutil>=2.8.2\",
    \"aiofiles>=23.2.1\",
]

[project.optional-dependencies]
dev = [
    \"pytest>=7.4.3\",
    \"pytest-asyncio>=0.21.1\",
    \"pytest-cov>=4.1.0\",
    \"pytest-mock>=3.12.0\",
    \"httpx>=0.25.2\",
    \"mypy>=1.7.1\",
    \"flake8>=6.1.0\",
    \"autopep8>=2.0.4\",
    \"pre-commit>=3.5.0\",
    \"ruff>=0.1.8\",
]

[tool.setuptools.packages.find]
where = [\"src\"]

[tool.setuptools.package-data]
\"*\" = [\"*.txt\", \"*.md\"]

[tool.ruff]
line-length = 79
target-version = \"py311\"

[tool.ruff.lint]
select = [\"E\", \"F\", \"W\", \"I\", \"N\", \"UP\", \"B\", \"A\", \"C4\", \"DTZ\", \"T10\", \"ISC\"]
ignore = []

[tool.mypy]
python_version = \"3.11\"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = \"7.0\"
addopts = \"-ra -q --cov=src --cov-report=term-missing --cov-fail-under=80\"
testpaths = [\"tests\"]
python_files = [\"test_*.py\"]
python_classes = [\"Test*\"]
python_functions = [\"test_*\"]
asyncio_mode = \"auto\"
</parameter>